--- a/ProjectISA/pom.xml
+++ b/ProjectISA/pom.xml
@@ -52,6 +52,10 @@
 			<version>2.3.0</version>
 		</dependency>
 		<dependency>
+   			<groupId>org.springframework.boot</groupId>
+   			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
