--- a/ProjectISA-front/angular.json
+++ b/ProjectISA-front/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ProjectISA-front": {
+    "projectISA-front": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ProjectISA-front",
+            "outputPath": "dist/projectISA-front",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ProjectISA-front:build"
+            "browserTarget": "projectISA-front:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ProjectISA-front:build:production"
+              "browserTarget": "projectISA-front:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ProjectISA-front:build"
+            "browserTarget": "projectISA-front:build"
           }
         },
         "test": {
@@ -110,15 +110,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ProjectISA-front:serve"
+            "devServerTarget": "projectISA-front:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ProjectISA-front:serve:production"
+              "devServerTarget": "projectISA-front:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "ProjectISA-front"
+  "defaultProject": "projectISA-front"
 }
