--- a/ProjectISA/src/main/resources/application.properties
+++ b/ProjectISA/src/main/resources/application.properties
@@ -12,6 +12,16 @@ spring.jackson.serialization.fail-on-empty-beans = false
 spring.datasource.initialization-mode = always
 #spring.datasource.data = classpath:data.sql
 
+spring.mail.host=smtp.gmail.com
+spring.mail.username=projectISA098
+spring.mail.password=sifraisa123
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+
+
 
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
