--- a/ProjectISA/src/main/resources/application.properties
+++ b/ProjectISA/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=root12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.generate-ddl=true
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jackson.serialization.fail-on-empty-beans = false
